@@ -8,8 +8,11 @@
 # 2010-06-29, jw -- initial draught
 # 2010-08-03, jw -- fixed -v.
 # 2010-08-31, jw -- fixed -q with -m.
+# 2010-09-01, jw -- added --list
 
 use Data::Dumper;
+$Data::Dumper::Terse = 1;
+$Data::Dumper::Indent = 1;
 use Getopt::Long qw(:config no_ignore_case);
 use Pod::Usage;
 use FindBin;
@@ -21,6 +24,7 @@ my @exclude;
 my $exclude_vcs = 1;
 my $help;
 my $mime_only;
+my $list_only;
 my @mime_handler_dirs;
 
 my %opt = ( verbose => 1, maxfilesize => '100M', one_shot => 0);
@@ -34,9 +38,10 @@ GetOptions(
 	"exclude-vcs!" => \$exclude_vcs,
 	"vcs|include-vcs!" => sub { $exclude_vcs = !$_[1]; },
 	"help|?"       => \$help,
-	"logfile=s"    => \$opt{logfile},
+	"logfile|L=s"  => \$opt{logfile},
 	"one_shot|1"   => \$opt{one_shot},
 	"mimetype|m+"  => \$mime_only,
+	"list-helpers|l+" => \$list_only,
 	"unpack-include-dir|I|u=s" => \@mime_handler_dirs,
 	"maxfilesize=s"=> \$opt{maxfilesize},
 ) or $help++;
@@ -49,6 +54,7 @@ file_unpack V$version Usage:
 
 $0 [options] input.tar.gz
 $0 [options] input/
+$0 -L
 
 Valid options are:
  -v	Be more verbose. Default: $opt{verbose}.
@@ -75,9 +81,12 @@ Valid options are:
  -h --help -?
         Print this online help.
  
- -l --logfile  file.log
+ -L --logfile  file.log
  	Specify a logfile, where freshly unpacked files are reported.
 	The format of the logfile is JSON; default is STDOUT.
+ 
+ -l --list-helpers
+ 	List all builtin mime-handlers and all external mime-helpers.
 
  --maxfilesize size
         Truncate an unpacked file, if it gets larger than the specified size.
@@ -93,24 +102,27 @@ Valid options are:
 
 }) if $help;
 
+$opt{logfile} ||= '/dev/null' if $list_only or $mime_only;
+my $u = File::Unpack->new(%opt);
+my $list = $u->mime_handler_dir(@mime_handler_dirs);
+
+if ($list_only)
+  {
+    print Dumper $list;
+    exit 0;
+  }
 
 if ($mime_only)
   {
-    my $u = File::Unpack->new(%opt, logfile => '/dev/null');
     my $m = $u->mime($archive);
-    $u->mime_handler_dir(@mime_handler_dirs);
     my ($h,$r) = $u->find_mime_handler($m);
-    $Data::Dumper::Terse = 1;
-    $Data::Dumper::Indent = 1;
     print Dumper $m;
     print File::Unpack::fmt_run_shellcmd($h) . "\n";
     exit 0;
   }
 
-my $u = File::Unpack->new(%opt);
 $u->exclude(vcs => $exclude_vcs);
 $u->exclude(add => \@exclude) if @exclude;
-$u->mime_handler_dir(@mime_handler_dirs);
 $u->unpack($archive);
 print Dumper $u->{error} if $u->{error};
 
